<resources>
    <string name="app_name">FürNewYearResolutioners</string>
    <string name="action_settings">Settings</string>
    <string name="pushup">Pushups</string>
    <string name="situp">Situps</string>
    <string name="squats">Squats</string>
    <string name="leg_lift">Leg Lifts</string>
    <string name="plank">Planks</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="pullup">Pullups</string>
    <string name="cycling">Cycling</string>
    <string name="walking">Walking</string>
    <string name="jogging">Jogging</string>
    <string name="swimming">Swimming</string>
    <string name="stair_climbing">Stair Climbing</string>
    <string name="hintAmount">this many</string>
    <string name="of">of</string>
    <string name="reps">reps</string>
    <string name="minutes">minutes</string>
    <string name="default0">0</string>
    <string name="empty"></string>
    <string name="did">I did</string>
    <string name="isequal">That\'s equal to</string>
    <string name="caloricOr">calories! Or:</string>
    <string name="lpushup">pushups</string>
    <string name="lsitup">situps</string>
    <string name="ljogging">minutes of jogging</string>
    <string name="ljumping_jacks">minutes of jumping jacks</string>


    <color name="grey">#EEEEEE</color>
    <color name="white">#FFFFFF</color>
</resources>
