<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sturmgewehr44.frnewyearresolutioners.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:id="@+id/entryLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="I did"
                android:tag="SUBJECT"
                android:id="@+id/subject"

                />

            <EditText
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:tag="NUMBER"
                android:hint="@string/hintAmount"
                android:gravity="center"
                android:id="@+id/amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reps"
                android:tag="REPMINUTES"
                android:paddingEnd="2dp"
                android:id="@+id/RepMinutes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/of"
                android:tag="OF"
                android:id="@+id/Of"
                android:paddingRight="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pushup"
                android:tag="ENDING"
                android:id="@+id/ending" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calorylineLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_below="@+id/entryLayout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="That's equal to "
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0"
                android:tag="caloryCounter"
                android:paddingEnd="2dp"
                android:id="@+id/arbeit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="calories! Or:"
                android:paddingRight="2dp"
                />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/convertedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLayout"
        android:layout_alignParentStart="true"
        >

        <ImageView
            android:contentDescription="@string/pushup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/androidxx"
            android:id="@+id/pushupView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="10dp"
            />

        <ImageView
            android:contentDescription="@string/situp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/androidxx"
            android:id="@+id/situpView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="10dp"
            />

        <ImageView
            android:contentDescription="@string/jogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/androidxx"
            android:id="@+id/joggingView"
            android:layout_below="@+id/pushupView"
            android:layout_alignEnd="@+id/pushupView"
            android:paddingTop="10dp"
            />

        <ImageView
            android:contentDescription="@string/jumping_jacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/androidxx"
            android:id="@+id/jumping_jacksView"
            android:layout_alignBottom="@id/joggingView"
            android:layout_alignStart="@+id/situpView" />


    </RelativeLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/convertedLayout"
        android:longClickable="true">


        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/horizontalScrollView"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/androidm"
                        android:tag="@string/pushup"
                        android:onClick="changeExercise"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/pushup"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/androidm"
                        android:tag="@string/situp"
                        android:onClick="changeExercise"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/situp"
                        android:layout_gravity="center_horizontal"

                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/androidm"
                        android:tag="@string/jogging"
                        android:onClick="changeExercise"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jogging"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/androidm"
                        android:tag="@string/jumping_jacks"
                        android:layout_gravity="center_horizontal"
                        android:onClick="changeExercise"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jumping_jacks"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/androidm"
                        android:tag="@string/squats"
                        android:onClick="changeExercise"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/squats"
                        android:layout_gravity="center_horizontal"
                        />

                </LinearLayout>


            </LinearLayout>

        </HorizontalScrollView>


    </FrameLayout>


</RelativeLayout>
